--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <h1>My First Website</h1>
     <p>My first paragraph.</p>
 
+        <h1>My Second Heading</h1>
+    <p>My second paragraph.</p>
+
   </body>
 </html>
