--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         <h1>My Second Heading</h1>
     <p>My second paragraph.</p>
 
+    <p class="grump-attribute">Grumpy Cat</p>
+
   </body>
 </html>
