--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Page Title</title>
-  </head>
-  <body>
 
-    <h1>My First Website</h1>
-    <p>My first paragraph.</p>
+<head>
+	<title>Page Title</title>
+</head>
 
-        <h1>My Second Heading</h1>
-    <p>My second paragraph.</p>
+<body>
 
-    <p class="grump-attribute">Grumpy Cat</p>
+	<h1>My First Website</h1>
+	<p>My first paragraph.</p>
 
-  </body>
+	<h1>My Second Heading</h1>
+	<p>My second paragraph.</p>
+
+	<p class="grump-attribute">Grumpy Cat</p>
+	<p> My cat is <strong>very</strong> grumpy </p>
+	<img src="https://www.flaticon.com/premium-icon/icons/svg/2939/2939531.svg" alt="Just another arrow">
+
+</body>
+
 </html>
