--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 	<p class="grump-attribute">Grumpy Cat</p>
 	<p> My cat is <strong>very</strong> grumpy </p>
 	<img src="https://www.flaticon.com/premium-icon/icons/svg/2939/2939531.svg" alt="Just another arrow">
+  <p>Hi! I am a:</p>
+  <ul>
+    <li>Developer</li>
+    <li>Designer</li>
+    <li>Photographer</li>
+  </ul>
 
+  <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a>
 </body>
 
 </html>
